# codex-pr-debate-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: comment-style.md
scripts/: setup.ps1  setup.sh  start_app.py  start_with_tunnel.py
src/pr_comment_codex_bot/: __init__.py  codex_thread.py  comments.py  env_file.py  github_client.py  main.py  models.py  security.py  service.py  settings.py  storage.py
tests/: test_codex_thread.py  test_comments.py  test_connection_status.py  test_e2e_repo_webhook_debate.py  test_security.py  test_start_app.py  test_tunnel_bootstrap.py
